<resources>
    <string name="common_delete">删除</string>
    <string name="common_goodsname">商品名称</string>
    <string name="common_name">名称</string>
    <string name="common_standard">规格</string>
    <string name="common_unitPrice">单价</string>
    <string name="common_minOrder">起订</string>
    <string name="common_goods_num">数量</string>
    <string name="common_goods_store">库存</string>
    <string name="common_operate">操作</string>
    <string name="commom_goods_createtime">生产日期</string>
    <string name="commom_goods_praise">限订</string>
    <string name="common_addcart">加入购物车</string>
    <string name="common_checkLogistics">查看物流</string>
    <string name="common_orderDetails">订单详情</string>
    <string name="common_immediatelyPay">立即支付</string>
    <string name="common_payDetails">付款详情</string>
    <string name="common_finish">完成</string>
    <string name="common_number">数量</string>
    <string name="common_unpay">待付款</string>


    <string name="app_name">邻家商盟</string>
    <string name="cart_order">订货单</string>
    <string name="cart_allSelect">全选</string>
    <string name="cart_submitOrder">提交订单</string>
    <string name="giftCard_stock">库存</string>
    <string name="giftCard_card">卡券</string>
    <string name="giftCart_rule">卡券使用规则</string>
    <string name="giftCard_useCard">抵用券</string>
    <string name="giftCard_goodsCard">购物券</string>
    <string name="giftCart_createTime">生成时间</string>
    <string name="giftCart_status">状态</string>
    <string name="goodsDetails_goodsDetails">商品详情</string>
    <string name="goodsDetails_barcode">条码   </string>
    <string name="goodsDetails_brand">品牌   </string>
    <string name="goodsDetails_unit">单位   </string>
    <string name="goodsDetails_type">类型   </string>
    <string name="goodsDetails_standard">规格   </string>
    <string name="login_accountNumber">请输入您的账号</string>
    <string name="login_passWord">请输入您的密码</string>
    <string name="login_login">登录</string>
    <string name="login_remAccountNumber">记住账号</string>
    <string name="main_linJiaBoss">邻家掌柜</string>
    <string name="main_goodsNameBarCode"> 商品名/条形码</string>
    <string name="myOrderForm_myOrder">我的订单</string>
    <string name="myOrderForm_finishOrder">已付款订单</string>
    <string name="myOrderForm_unfinishOrder">待付款订单</string>
    <string name="myOrderForm_historyOrder">已收货订单</string>
    <string name="myOrderForm_orderNum">订单号</string>
    <string name="myOrderForm_orderTime">下单时间</string>
    <string name="myOrderForm_money">金额</string>
    <string name="myOrderForm_orderState">订单状态</string>
    <string name="orderdetail_orderNum">订单号：</string>
    <string name="orderDetail_orderTime">下单时间：</string>
    <string name="payDetails_payMethod">支付方式：</string>
    <string name="payDetails_weiChatPay">微信支付</string>
    <string name="payDetails_deliveryMessage">配送信息：</string>
    <string name="payDetails_linjiaDelivery">邻家配送</string>
    <string name="payDetails_deliveryDate">配送日期：</string>
    <string name="payDetails_goodsTotalMoney">商品总额：</string>
    <string name="payDetails_privilege">优惠：</string>
    <string name="payDetails_transportationMoney">运费：</string>
    <string name="payDetails_realPay">实付款 ￥ </string>
    <string name="person_bossCenter">掌柜中心</string>
    <string name="person_unGetGoods">待收货</string>
    <string name="person_alreadyGet">已收货</string>
    <string name="person_message">消息</string>
    <string name="person_myLocation">我的收货地址</string>
    <string name="person_setting">设置</string>
    <string name="search_searchDetails">    选中的分类/搜索关键字</string>
    <string name="search_searchtext">搜索</string>
    <string name="search_hotSearch">热搜</string>
    <string name="search_history">历史</string>
    <string name="submitOrderForm_store">店铺：</string>
    <string name="submitOrderForm_getGoodsMan">收货人：</string>
    <string name="submitOrderForm_phoneNumber">联系电话：</string>
    <string name="submitOrderForm_location">地址：</string>
    <string name="submitOrderForm_remark">备注：</string>
    <string name="fragmentCard_renminbi">￥</string>
    <string name="fragmentCard_unuse">未使用</string>
    <string name="fragment_canUse">可使用</string>
    <string name="fragmet_alUse">已使用</string>
    <string name="fragment_outOfTime">已过期</string>
    <string name="uncoupon">暂时无可用卡券</string>
    <string name="internet_fail_message">您的网络好像出了问题</string>
    <string name="again_loading">重新加载</string>
    <string name="cart_orderForm_title_number">数量</string>
    <string name="cart_payment_btn">结算</string>
    <string name="commit_payment_btn">支付订单</string>
    <string name="commit_orderform_real_pay">实付</string>
    <string name="commit_orderform_freight">运费</string>
    <string name="commit_orderform_totalMonney">总额</string>
    <string name="select_pay_dialog_title">请选择支付方式</string>
    <string name="select_pay_dialog_alipay">支付宝</string>
    <string name="select_pay_dialog_baidu">百度钱包</string>
    <string name="select_pay_dialog_weixin">微信</string>
    <string name="select_pay_dialog_tencent">QQ钱包</string>
    <string name="pay_state_activity_return_main">返回首页</string>
    <string name="data_loaging_fail">哎呀，出错啦！</string>
    <string name="service_line">邻家客服</string>
    <string name="service_line_num">400-928-3888</string>

    <!--submitorderformactivity 的button stirng-->
    <string name="submitActivity_button_already_pay">已付款</string>
    <string name="submitActivity_button_topay">去付款</string>
    <!--submitorderformactivity 的textview string-->
    <string name="submitActivity_textview_shopCoupon">购物券</string>
    <string name="submitActivity_textview_offsetCoupon">抵扣券</string>


    <!--支付结果页面-->
    <string name="payResult_activity_title_succeed">支付成功</string>
    <string name="payResult_activity_title_fail">支付失败</string>
    <string name="payResult_activity_returnMain_btn">返回首页</string>

    <!--选择卡券dialog-->
    <string name="select_coupon_dialog_nothaveCoupon">╮(╯▽╰)╭没有可用卡券</string>
    
</resources>
