<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_edit_text_shape"
    >
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <Button
            android:paddingTop="30px"
            android:paddingBottom="30px"
            android:drawableTop="@mipmap/zhifubao"
            android:id="@+id/select_pay_dialog_alipay_item"
            android:background="@null"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_pay_dialog_alipay"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <Button
            android:paddingTop="30px"
            android:paddingBottom="30px"
            android:drawableTop="@mipmap/weixinzhifu"
            android:id="@+id/select_pay_dialog_weixin_item"
            android:background="@null"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_pay_dialog_weixin"
            android:onClick="onClick"
            />
    </LinearLayout>

    <Button
        android:id="@+id/select_pay_dialog_baidu_item"
        android:background="@null"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_pay_dialog_baidu"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/select_pay_dialog_tencent_item"
        android:background="@null"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_pay_dialog_tencent"
        android:visibility="gone"
        />
</LinearLayout>