<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity"
    android:background="#dd0404">
    <ImageView
        android:padding="50px"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/linjia_login"
        />
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="404px"
    >
    <Spinner
        android:layout_marginTop="102px"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/login_spinner"
        android:singleLine="true"
        android:background="@drawable/login_edit_text_shape"
        />
    <EditText
        android:id="@+id/loginactivity_bossname"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:layout_marginTop="34px"
        android:gravity="center"
        android:textColor="#000000"
        android:hint="@string/login_accountNumber"
        android:singleLine="true"
        android:background="@drawable/login_edit_text_shape"
       />
        <RelativeLayout
            android:layout_marginTop="22px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <EditText
                android:gravity="center"
                android:id="@+id/loginactivity_bosspassword"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:hint="@string/login_passWord"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@drawable/login_edit_text_shape"
                />
            <!--<ImageView-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_alignRight="@+id/loginactivity_bosspassword"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@mipmap/eye"-->
                <!--/>-->
        </RelativeLayout>
    <Button
        android:background="@drawable/login_enter_button_shape"
        android:id="@+id/loginactivity_btnlog"
        android:layout_marginTop="22px"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/login_login"
        android:textColor="#ffffff"
        />
        <CheckBox
            android:layout_marginTop="20px"
            android:id="@+id/loginactivity_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remAccountNumber"
            android:textSize="22sp"
            style="@style/CustomCheckboxTheme"
            android:textColor="#FFFFFF"
            android:checked="false"/>

</LinearLayout>

</RelativeLayout>
